--- a/.github/DISCUSSION_TEMPLATE/install-help.yml
+++ b/.github/DISCUSSION_TEMPLATE/install-help.yml
@@ -5,22 +5,22 @@ body:
   attributes:
     value: |
       ## Before you begin
-      Please check the [discussions page](https://github.com/Qonfused/ASUS-ZenBook-Duo-14-UX481-Hackintosh/discussions) to see if a discussion already exists for your question, idea, etc.
+      Please check the [discussions page](https://github.com/Qonfused/ASUS-ZenBook-Pro-Duo-15-UX581-Hackintosh/discussions) to see if a discussion already exists for your question, idea, etc.
 
-      If you have a feature idea or have found a regression or bug, please open a [new issue](https://github.com/Qonfused/ASUS-ZenBook-Duo-14-UX481-Hackintosh/discussions/new/choose) instead.
+      If you have a feature idea or have found a regression or bug, please open a [new issue](https://github.com/Qonfused/ASUS-ZenBook-Pro-Duo-15-UX581-Hackintosh/discussions/new/choose) instead.
 
-      You can check out the project [wiki](https://github.com/Qonfused/ASUS-ZenBook-Duo-14-UX481-Hackintosh/wiki) for an install/post-install guide, as well guides for various fixes and improvements.
+      You can check out the project [wiki](https://github.com/Qonfused/ASUS-ZenBook-Pro-Duo-15-UX581-Hackintosh/wiki) for an install/post-install guide, as well guides for various fixes and improvements.
 
       ----
 - type: dropdown
   id: variant
   attributes:
-    label: Zenbook Duo Variant
-    description: What variant(s) of the Zenbook Duo (14", 2019) are you using?
+    label: Zenbook Pro Duo Variant
+    description: What variant(s) of the Zenbook Pro Duo (15", 2019/2020) are you using?
     multiple: true
     options:
-      - i5/i7 UX481FL (with Nvidia MX250)
-      - i5/i7 UX481FA (without Nvidia MX250)
+      - i7/i9 UX581LV (10th-gen with RTX 2060)
+      - i7/i9 UX581GV (9th-gen with RTX 2060)
   validations:
     required: true
 - type: textarea
