--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -9,22 +9,22 @@ body:
   attributes:
     value: |
       ## Before you begin
-      Please check the [issues page](https://github.com/Qonfused/ASUS-ZenBook-Duo-14-UX481-Hackintosh/issues?q=is:issue+sort:updated-desc+is:open) and [known issues list](https://github.com/Qonfused/ASUS-ZenBook-Duo-14-UX481-Hackintosh/issues?q=is:issue+sort:updated-desc+label:"known+issue"+is:closed) to see if an issue already exists for the bug you encountered.
+      Please check the [issues page](https://github.com/Qonfused/ASUS-ZenBook-Pro-Duo-15-UX581-Hackintosh/issues?q=is:issue+sort:updated-desc+is:open) and [known issues list](https://github.com/Qonfused/ASUS-ZenBook-Pro-Duo-15-UX581-Hackintosh/issues?q=is:issue+sort:updated-desc+label:"known+issue"+is:closed) to see if an issue already exists for the bug you encountered.
 
-      If you have a question or need help with your configuration, please open a [new discussion](https://github.com/Qonfused/ASUS-ZenBook-Duo-14-UX481-Hackintosh/discussions/new/choose) instead.
+      If you have a question or need help with your configuration, please open a [new discussion](https://github.com/Qonfused/ASUS-ZenBook-Pro-Duo-15-UX581-Hackintosh/discussions/new/choose) instead.
 
-      You can check out the project [wiki](https://github.com/Qonfused/ASUS-ZenBook-Duo-14-UX481-Hackintosh/wiki) for an install/post-install guide, as well guides for various fixes and improvements.
+      You can check out the project [wiki](https://github.com/Qonfused/ASUS-ZenBook-Pro-Duo-15-UX581-Hackintosh/wiki) for an install/post-install guide, as well guides for various fixes and improvements.
 
       ----
 - type: dropdown
   id: variant
   attributes:
-    label: Zenbook Duo Variant
-    description: What variant(s) of the Zenbook Duo (14", 2019) are you using?
+    label: Zenbook Pro Duo Variant
+    description: What variant(s) of the Zenbook Pro Duo (15", 2019/2020) are you using?
     multiple: true
     options:
-      - i5/i7 UX481FL (with Nvidia MX250)
-      - i5/i7 UX481FA (without Nvidia MX250)
+      - i7/i9 UX581LV (10th-gen with RTX 2060)
+      - i7/i9 UX581GV (9th-gen with RTX 2060)
   validations:
     required: true
 - type: input
