--- a/src/build.yml
+++ b/src/build.yml
@@ -79,7 +79,8 @@ include:
     ThunderboltReset: osy/ThunderboltReset=latest
     # Misc. non-Lilu kexts
     IOElectrify: the-darkvoid/macOS-IOElectrify=latest
-    USBMap: "./Kexts/USBMap.kext"
+    USBToolBox: USBToolbox/kext=latest
+    UTBMap: "./Kexts/UTBMap.kext"
     # Voodoo kexts + plugins
     VoodooI2C/VoodooI2CServices: "*"
     VoodooI2C/VoodooGPIO: "*"
