--- a/src/config.yml
+++ b/src/config.yml
@@ -126,14 +126,11 @@ Booter:
     # - Addresses macOS conflict with CR0 MRS register.
     # - https://dortania.github.io/OpenCore-Install-Guide/troubleshooting/extended/kernel-issues.html#kernel-panic-on-invalid-frame-pointer
     # - Note: The below options reflect support for MATs (2018+ firmware).
-    #         For the UX581GV (9th gen) model, use the values commented below.
+    #         For the UX581GV (9th gen) model, refer to config.patch:UX581GV.yml
     EnableWriteUnprotector:           Boolean | false
-    # EnableWriteUnprotector:           Boolean | true
     ProtectUefiServices:              Boolean | true
     RebuildAppleMemoryMap:            Boolean | true
-    # RebuildAppleMemoryMap:            Boolean | false
     SyncRuntimePermissions:           Boolean | true
-    # SyncRuntimePermissions:           Boolean | false
 
 # Sets hibernation behavior defaults.
 # - This leverages functionality from the HibernationFixup kext.
