--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,37 +1,17 @@
 name: Generate Release
 on: workflow_dispatch
-permissions:
-  contents: write
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      # Installs dependencies needed for running OCE-Build.
-      #
-      # This includes the following required commands:
-      # - libarchive-tools:
-      #   - **BSDTAR**: Used for unarchiving .zip files.
-      # - acpica-tools:
-      #   - **iasl**: Required for compiling .dsl files.
-      - name: Install OCE-Build dependencies
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt install -qq -o=Dpkg::Use-Pty=0 \
-            libarchive-tools \
-            acpica-tools
       # Fetches remote repository without --progress option.
       #
       # The default behavior of @actions/checkout outputs many noisy lines of
       # status output in the workflow log, which is problematic for log size.
-      #
-      # Refer to the below PR for updates on this issue:
-      # - https://github.com/actions/checkout/pull/1067
       - name: Checkout latest repository commit
-        # uses: actions/checkout@v3
-        uses: simonbaird/checkout@no-progress-option
+        uses: actions/checkout@v4
         with:
           show-progress: false
-          submodules: recursive
       # Generate Changelog notes and release info
       - id: get-tag
         name: Fetches latest release tag
@@ -66,7 +46,5 @@ jobs:
           tag_name: ${{ env.TAG }}
           body_path: ${{ github.workspace }}-RELEASE_NOTES.txt
           files: |
-            EFI-${{ env.TAG }}-UX581GV-RELEASE.zip
-            EFI-${{ env.TAG }}-UX581GV-DEBUG.zip
-            EFI-${{ env.TAG }}-UX581LV-RELEASE.zip
-            EFI-${{ env.TAG }}-UX581LV-DEBUG.zip
+            EFI-${{ env.TAG }}-RELEASE.zip
+            EFI-${{ env.TAG }}-DEBUG.zip
